--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,20 @@ li {
   position: relative;
 }
 
+.main-title {
+  font-size: 30px;
+}
 
+.subtitle {
+  font-size: 12px;
+}
+.margin-main-titl {
+  margin: 30px 20px;
+}
+
+.text-center {
+  text-align: center;
+}
 /* //////////////////////////COLORS UTILITY\\\\\\\\\\\\\\\\\\\\\\\ */
 
 .bg-color-black {
@@ -90,6 +103,8 @@ li {
 .over-white:hover {
   color: #fff;
 }
+
+
 /* /////////////////////////////STYLE\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
 
 .side-bar {
@@ -243,6 +258,13 @@ nav > ul > li:hover hr {
   width: 35px;
   border: 1px solid #C6FF5E;
   margin-top: 4px;
+}
+
+.img-album-container > img {
+  height: 200px;
+}
+.albums-hr {
+  justify-content: space-around;
 }
 
 /* ///////////////////////////MEDIA QUERY\\\\\\\\\\\\\\\\\\\\\\\\\\ */
