album row orizzontale completa (no responsive)

--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,10 @@ li {
 .text-center {
   text-align: center;
 }
+
+.label-title-box {
+  width: 190px;
+}
 /* //////////////////////////COLORS UTILITY\\\\\\\\\\\\\\\\\\\\\\\ */
 
 .bg-color-black {
