--- a/css/style.css
+++ b/css/style.css
@@ -23,21 +23,21 @@ li {
   padding: 0;
 }
 
+a {
+  text-decoration: none;
+  color: #707070;
+}
 .wrapper {
   height: 100vh;
   width: 100vw;
   max-width: 100%;
-  min-height: 100px;
-
 }
 
-.flex-container-column {
+.flex-column {
   display: flex;
   flex-direction: column;
-
-  border: 1px solid red;
 }
-.flex-container {
+.flex {
   display: flex;
 
   /* border: 1px solid orange; */
@@ -65,6 +65,10 @@ li {
   position: relative;
 }
 
+.padding-default {
+  padding: 5px;
+
+}
 .main-title {
   font-size: 30px;
 }
@@ -110,15 +114,19 @@ li {
 
 
 /* /////////////////////////////STYLE\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
-
+.principal-section {
+  width: 100%;
+  height: calc(100% - 90px);
+}
 .side-bar {
   width:230px;
-  height: calc(100% - 90px);
+  height: 100%;
 }
 
 header {
   height: 90px;
-  width: 100%;
+  width: calc(100vw - 230px);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 main {
@@ -135,7 +143,7 @@ footer {
 }
 
 .box-r {
-  height: calc(100% - 90px);
+  height: 100%;
   width: calc(100% - 230px);
 }
 
@@ -146,18 +154,25 @@ footer {
 .logo-container > img {
   width: 140px;
 }
+.side-top {
+  height: calc(100% - 120px);
+}
+
+.side-bottom {
+  height: 120px;
+}
 
 .nav-side-b li {
   border-left: 2px solid transparent;
   padding-left: 20px;
-  line-height: 50px;
+  line-height: 30px;
 }
 
 /* esempio colore se selezionato */
 .nav-side-b li:hover {
   border-left: 2px solid #C6FF5E;
   padding-left: 20px;
-  line-height: 50px;
+  line-height: 30px;
 }
 
 .nav-side-b li > img {
@@ -174,10 +189,6 @@ footer {
   vertical-align: middle;
 }
 
-.user-container {
-  position: absolute;
-  bottom: 0px;
-}
 
 .playlist-container {
   padding-left: 20px;
@@ -193,6 +204,11 @@ footer {
   margin-right: 5px;
 }
 
+.playlist: {
+  overflow-y: auto;
+  min-height: 600px;
+
+}
 .playlist > ul > li {
   margin: 20px 0px;
 }
@@ -247,6 +263,7 @@ nav > ul > li {
   margin: 0px 10px;
 }
 nav {
+  margin-top: 110px;
   justify-content: center;
 }
 
@@ -267,15 +284,21 @@ nav > ul > li:hover hr {
 .img-album-container > img {
   height: 200px;
 }
+
+.img-album-container {
+  margin-right: 20px;
+}
 .albums-hr {
-  justify-content: space-around;
+  margin-left: 20px;
+  flex-wrap: wrap;
 }
 
 /* ///////////////////////////MEDIA QUERY\\\\\\\\\\\\\\\\\\\\\\\\\\ */
 
-/* XS */
-@media screen (max-width: 767px) {
-  .hidden-xs {
+/* MD */
+
+@media screen  and (max-width: 1199px) {
+  .hidden-md {
     display: none;
   }
 
@@ -283,27 +306,23 @@ nav > ul > li:hover hr {
 
 /* SM */
 
-@media screen  (min-width: 768px) {
+@media screen  and (max-width: 991px) {
   .hidden-sm {
     display: none;
   }
-
-}
-
-/* MD */
-
-@media screen  (min-width: 992px) {
-  .hidden-md {
-    display: none;
+  .albums-hr {
+    flex-wrap: wrap;
   }
 
 }
 
-/* LG */
-
-@media screen  (min-width: 1200px) {
-  .hidden-lg {
+/* XS */
+@media screen and (max-width: 767px) {
+  .hidden-xs {
     display: none;
+  }
+  .albums-hr {
+    flex-wrap: wrap;
   }
 
 
