--- a/css/style.css
+++ b/css/style.css
@@ -277,7 +277,7 @@ nav > ul > li:hover hr {
   margin-top: 4px;
 }
 
-.img-album-container > img {
+.img-album-container > .img-box > img {
   height: 200px;
 }
 
@@ -289,6 +289,16 @@ nav > ul > li:hover hr {
   flex-wrap: wrap;
 }
 
+.img-box {
+    background-image: url("../img/icon/play.png");
+    background-size: 200px;
+}
+
+
+.img-album-container img:hover {
+  opacity: 0.4;
+
+}
 /* ///////////////////////////MEDIA QUERY\\\\\\\\\\\\\\\\\\\\\\\\\\ */
 
 /* MD */
