--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,12 @@ body {
   font-weight: bold;
 }
 
+.wrapper {
+  height: 100vh;
+  width: 100vw;
+  max-width: 100%;
+}
+
 ul {
   margin: 0;
   padding: 0;
@@ -27,11 +33,6 @@ a {
   text-decoration: none;
   color: #707070;
 }
-.wrapper {
-  height: 100vh;
-  width: 100vw;
-  max-width: 100%;
-}
 
 .flex-column {
   display: flex;
@@ -39,7 +40,6 @@ a {
 }
 .flex {
   display: flex;
-
   /* border: 1px solid orange; */
 }
 
@@ -85,7 +85,11 @@ a {
 }
 
 .label-title-box {
-  width: 190px;
+  max-width: 190px;
+}
+
+.circular-img > img{
+  border-radius: 50%;
 }
 /* //////////////////////////COLORS UTILITY\\\\\\\\\\\\\\\\\\\\\\\ */
 
@@ -115,25 +119,33 @@ a {
 
 /* /////////////////////////////STYLE\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
 .principal-section {
-  width: 100%;
+  max-width: 100%;
   height: calc(100% - 90px);
-  overflow: hidden;
 }
+
+.box-r {
+  height: 100%;
+  width: calc(100% - 230px);
+}
+
 .side-bar {
   width:230px;
   height: 100%;
+  overflow-y: hidden;
 }
 
 header {
   height: 90px;
-  width: calc(100vw - 230px);
+  width: calc(100% - 230px);
+  min-width: 300px;
   background-color: rgba(0, 0, 0, 0.5);
 }
 
 main {
   height: 100%;
-  width: 100%;
-  overflow-y: auto;
+  max-width: 100%;
+  min-width: 500px;
+  overflow-y: scroll;
 }
 
 footer {
@@ -141,10 +153,6 @@ footer {
   width:100%;
 }
 
-.box-r {
-  height: 100%;
-  width: calc(100% - 230px);
-}
 
 /* side-bar */
 .logo-container {
@@ -156,7 +164,7 @@ footer {
 .side-top {
   height: calc(100% - 120px);
   min-height: 450px;
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
 .side-bottom {
@@ -177,7 +185,7 @@ footer {
 }
 
 .nav-side-b li > img {
-  height: 20px;
+  height: 30px;
   vertical-align: middle;
 }
 
@@ -186,7 +194,7 @@ footer {
 }
 
 .download > img {
-  height: 20px;
+  width: 20px;
   vertical-align: middle;
 }
 
@@ -212,7 +220,7 @@ footer {
   padding: 20px;
 }
 .download {
-  width: 180px;
+  max-width: 180px;
   border-bottom: 2px solid;
   padding-bottom: 10px;
   margin-bottom: 10px;
@@ -235,7 +243,7 @@ footer {
 
 .button-upgrade-container {
   line-height: 90px;
-  margin-right: 10px;
+  margin-right: 25px;
 }
 
 .button-upgrade-container > .button {
@@ -261,6 +269,7 @@ nav > ul > li {
 nav {
   margin-top: 110px;
   justify-content: center;
+  text-align: center;
 }
 
 nav > ul > li > hr {
@@ -268,68 +277,65 @@ nav > ul > li > hr {
   width: 35px;
   border: 1px solid transparent;
   margin-top: 5px;
-
 }
+
 nav > ul > li:hover hr {
-  margin: 0 auto;
-  width: 35px;
   border: 1px solid #C6FF5E;
-  margin-top: 4px;
-}
-
-.img-album-container > .img-box > img {
-  height: 200px;
 }
 
 .img-album-container {
-  margin-right: 20px;
+  margin-right: 15px;
 }
 .albums-hr {
+  max-width: 100%;
   margin-left: 20px;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 
 .img-box {
-    background-image: url("../img/icon/play.png");
-    background-size: 200px;
+  max-width: 180px;
+  background-image: url("../img/icon/play.png");
+  background-repeat: no-repeat;
+  background-size: 40%;
+  background-position: center;
+}
+.img-album-container > .img-box > img {
+  max-width: 100%;
 }
 
-
 .img-album-container img:hover {
-  opacity: 0.4;
+  opacity: 0.2;
 
 }
 /* ///////////////////////////MEDIA QUERY\\\\\\\\\\\\\\\\\\\\\\\\\\ */
 
 /* MD */
 
-@media screen  and (max-width: 1199px) {
+@media screen  and (max-width: 992px) {
   .hidden-md {
     display: none;
   }
+
+
 
 }
 
 /* SM */
 
-@media screen  and (max-width: 991px) {
+@media screen  and (max-width: 768px) {
   .hidden-sm {
     display: none;
   }
-  .albums-hr {
-    flex-wrap: wrap;
-  }
+
+
+
 
 }
 
 /* XS */
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 576px) {
   .hidden-xs {
     display: none;
   }
-  .albums-hr {
-    flex-wrap: wrap;
-  }
-
 
 }
