--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ a {
 
 /* /////////////////////////////STYLE\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
 .principal-section {
-  max-width: 100%;
+  width: 100%;
   height: calc(100% - 90px);
 }
 
@@ -143,7 +143,7 @@ header {
 
 main {
   height: 100%;
-  max-width: 100%;
+  width: 100%;
   min-width: 500px;
   overflow-y: scroll;
 }
@@ -158,8 +158,12 @@ footer {
 .logo-container {
   padding: 20px;
 }
+
 .logo-container > img {
   width: 140px;
+}
+.xs-logo-sidebar {
+  display: none;
 }
 .side-top {
   height: calc(100% - 120px);
@@ -185,7 +189,7 @@ footer {
 }
 
 .nav-side-b li > img {
-  height: 30px;
+  width: 20px;
   vertical-align: middle;
 }
 
@@ -227,7 +231,7 @@ footer {
 }
 
 .user-img > img {
-  height: 40px;
+  max-width: 40px;
   padding: 1px;
   border-radius: 50%;
   background-color: #757575;
@@ -283,17 +287,16 @@ nav > ul > li:hover hr {
   border: 1px solid #C6FF5E;
 }
 
-.img-album-container {
-  margin-right: 15px;
-}
 .albums-hr {
   max-width: 100%;
   margin-left: 20px;
-  flex-wrap: nowrap;
 }
 
+.img-album-container {
+  margin-right: 15px;
+}
 .img-box {
-  max-width: 180px;
+  max-width: 190px;
   background-image: url("../img/icon/play.png");
   background-repeat: no-repeat;
   background-size: 40%;
@@ -336,6 +339,43 @@ nav > ul > li:hover hr {
 @media screen and (max-width: 576px) {
   .hidden-xs {
     display: none;
+  }
+  .side-bar {
+    width:50px;
+    height: 100%;
+    overflow-y: hidden;
+  }
+  .xs-logo-sidebar {
+    font-size: 30px;
+    padding: 0px 10px;
+  }
+  .nav-side-b li {
+    border-left: 2px solid transparent;
+    padding-left: 10px;
+    line-height: 30px;
+  }
+
+  /* esempio colore se selezionato */
+  .nav-side-b li:hover {
+    border-left: 2px solid #C6FF5E;
+    padding-left: 10px;
+    line-height: 30px;
+  }
+
+  .user-container {
+    margin:0;
+    padding: 0px;
+  }
+
+  .download {
+    padding-left: 5px;
+  }
+  .user-img > img {
+    width: 30px;
+    padding: 2px;
+    border-radius: 50%;
+    background-color: #757575;
+    margin-right: 5px;
   }
 
 }
