--- a/css/style.css
+++ b/css/style.css
@@ -296,6 +296,7 @@ nav > ul > li:hover hr {
 
 .img-box {
   max-width: 180px;
+  /*senza max-width le immagini si allargano per coprire lo spazio disponibile eliminando l'effetto di avvicinamento nella prima parte del responsive*/
   background-image: url("../img/icon/play.png");
   background-repeat: no-repeat;
   background-size: 50%;
@@ -467,6 +468,11 @@ nav > ul > li:hover hr {
     width: calc((100% / 12) * 3)
   }
 
+  .controllers > ul > li {
+    font-size: 16px;
+    margin-right: 25px;
+  }
+
 }
 
 /* SM */
@@ -561,7 +567,7 @@ nav > ul > li:hover hr {
     padding: 0 5px;
   }
   .player-cmd {
-    font-size: 10px;
+    font-size: 13px;
   }
   .player-cmd > .play-resize {
     font-size: 20px;
@@ -585,14 +591,33 @@ nav > ul > li:hover hr {
     font-size: 13px;
   }
 
-
+  .controllers > ul > li {
+    font-size: 13px;
+    margin-right: 10px;
+  }
 }
 
+/* under xs */
 @media screen and (max-width: 360px) {
   .hidden-underxs {
     display: none;
   }
+  .player-cmd {
+    margin-top: 15px;
+  }
+  .controllers  {
+    flex: none;
+  }
+  .controllers > ul {
+    flex: none;
+    display: block;
+  }
+  .footer-dx {
+    transform: translate(0, -20%);
+  }
 }
+
+/* height */
 
 @media screen and (max-height: 160px) {
   .hidden-height90 {
