--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ a {
   display: flex;
   flex-direction: column;
 }
+
 .flex {
   display: flex;
 }
@@ -68,6 +69,7 @@ a {
   padding: 5px;
 
 }
+
 .main-title {
   font-size: 30px;
 }
@@ -75,6 +77,7 @@ a {
 .subtitle {
   font-size: 12px;
 }
+
 .margin-main-titl {
   margin: 30px 20px;
 }
@@ -86,6 +89,7 @@ a {
 .circular-img > img{
   border-radius: 50%;
 }
+
 /* //////////////////////////COLORS UTILITY\\\\\\\\\\\\\\\\\\\\\\\ */
 
 .bg-color-black {
@@ -107,12 +111,18 @@ a {
 .font-white {
   color: #fff;
 }
+
 .over-white:hover {
   color: #fff;
+  opacity:inherit;
 }
 
+.padding-l20{
+  padding-left: 20px;
+}
 
 /* /////////////////////////////STYLE\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
+
 .principal-section {
   width: 100%;
   height: calc(100% - 90px);
@@ -127,6 +137,7 @@ a {
   width:230px;
   height: 100%;
   overflow-y: hidden;
+  border: 1px solid red;
 }
 
 header {
@@ -146,8 +157,8 @@ footer {
   width: 100%;
 }
 
-
 /* side-bar */
+
 .logo-container {
   padding: 20px;
 }
@@ -155,18 +166,17 @@ footer {
 .logo-container > img {
   width: 140px;
 }
+
 .xs-logo-sidebar {
   display: none;
 }
+
 .side-top {
   height: calc(100% - 120px);
   overflow-y:hidden;
+  min-height: 450px;
 }
 
-.playlist > ul {
-  min-height: 300px;
-  overflow-y: auto;
-}
 .side-bottom {
   height: 120px;
 }
@@ -177,48 +187,52 @@ footer {
   line-height: 30px;
 }
 
+
 /* esempio colore se selezionato */
+
 .nav-side-b li:hover {
   border-left: 2px solid #C6FF5E;
   padding-left: 20px;
   line-height: 30px;
 }
 
-.nav-side-b li > img {
+.nav-side-b li  img {
   width: 20px;
   vertical-align: middle;
+  opacity: 0.3;
 }
 
 .nav-side-b {
   margin-bottom: 20px;
 }
 
-.download > img {
-  width: 20px;
-  vertical-align: middle;
+.side-bar li:hover img,
+.download a:hover img {
+  color: #fff;
+  opacity: 1;
 }
 
-.playlist-container {
-  padding-left: 20px;
+.download .link-downl img {
+  width: 20px;
+  vertical-align: middle;
+  opacity: 0.5;
 }
 
 .playlist-title-section,
 .crea-pl-container {
   margin-bottom: 10px;
 }
+
 .crea-pl-container > i {
   font-size: 40px;
   vertical-align: middle;
   margin-right: 5px;
 }
 
-.playlist > ul > li {
-  margin: 20px 0px;
+.scroll-list > li {
+  line-height: 40px;
 }
 
-.user-container {
-  padding: 20px;
-}
 .download {
   max-width: 180px;
   border-bottom: 2px solid;
@@ -235,9 +249,6 @@ footer {
   margin-right: 5px;
 }
 
-.side-bar li:hover {
-  color: #fff;
-}
 /* end side-bar */
 /* hader */
 
@@ -258,6 +269,7 @@ footer {
 }
 
 /* nav in main section */
+
 nav {
   margin: 20px 0px;
 }
@@ -266,6 +278,7 @@ nav > ul > li {
   display: inline-block;
   margin: 0px 10px;
 }
+
 nav {
   margin-top: 110px;
   text-align: center;
@@ -291,7 +304,6 @@ nav > ul > li:hover hr {
 .img-album-container {
   padding-right: 15px;
   width: calc((100% / 12) * 2)
-
 }
 
 .img-box {
@@ -316,6 +328,7 @@ nav > ul > li:hover hr {
 }
 
 /* footer */
+
 .footer-row {
   max-width: 100%;
   padding: 5px 20px;
@@ -328,6 +341,7 @@ nav > ul > li:hover hr {
   max-height: 85px;
   align-content: center;
 }
+
 .footer-col-center {
   flex:6;
   padding-right: 15px;
@@ -339,13 +353,16 @@ nav > ul > li:hover hr {
   max-width: 50px;
   margin-right: 5px;
 }
+
 .album-mini-img > img {
   width: 100%;
   min-width: 50px;
 }
+
 .title-mini-album {
   font-size: 12px;
 }
+
 .subtitle-mini-album {
   font-size: 10px;
 }
@@ -355,24 +372,25 @@ nav > ul > li:hover hr {
   align-content: center;
   flex-wrap: wrap;
 }
+
 .icon-folder-like > .icon-foot-left  i {
   margin-right: 5px;
 }
-.player {
-  width: 100%;
-}
+
 .player-cmd {
   justify-content: center;
   align-items: center;
   margin-bottom: 5px;
-
 }
+
 .player-cmd > li {
   padding: 0 15px;
 }
+
 .player-cmd > .play-resize {
   font-size: 28px;
 }
+
 .player-cmd > .play-resize:hover {
   transform: scale(1.2);
   color: #fff;
@@ -387,6 +405,7 @@ nav > ul > li:hover hr {
   justify-content: center;
   align-items: center;
 }
+
 .play-bar,
 .volume-bar {
   content: "";
@@ -412,6 +431,7 @@ nav > ul > li:hover hr {
   margin: 0px ;
   border-radius: 5px;
 }
+
 .play-bar:hover .play-position-20perc,
 .volume-bar:hover .volume-position-20perc {
   background-color: #C6FF5E;
@@ -441,6 +461,7 @@ nav > ul > li:hover hr {
   align-items: center;
   padding-top: 20px;
 }
+
 .controllers  ul li {
   margin-right: 15px;
 }
@@ -501,27 +522,26 @@ nav > ul > li:hover hr {
     border-radius: 25px;
     font-size: 10px;
   }
-
-
-
-
-
 }
 
 /* XS */
+
 @media screen and (max-width: 576px) {
   .hidden-xs {
     display: none;
   }
+
   .side-bar {
     width:50px;
     height: 100%;
     overflow-y: hidden;
   }
+
   .xs-logo-sidebar {
     font-size: 30px;
     padding: 0px 10px;
   }
+
   .nav-side-b li {
     border-left: 2px solid transparent;
     padding-left: 10px;
@@ -529,6 +549,7 @@ nav > ul > li:hover hr {
   }
 
   /* esempio colore se selezionato */
+
   .nav-side-b li:hover {
     border-left: 2px solid #C6FF5E;
     padding-left: 10px;
@@ -543,6 +564,7 @@ nav > ul > li:hover hr {
   .download {
     padding-left: 5px;
   }
+
   .user-img > img {
     width: 30px;
     padding: 2px;
@@ -563,15 +585,19 @@ nav > ul > li:hover hr {
     padding: 0 5px;
     font-size: 10px;
   }
+
   .player-cmd > li {
     padding: 0 5px;
   }
+
   .player-cmd {
     font-size: 13px;
   }
+
   .player-cmd > .play-resize {
     font-size: 20px;
   }
+
   nav {
     font-size: 12px;
   }
@@ -619,7 +645,7 @@ nav > ul > li:hover hr {
 
 /* height */
 
-@media screen and (max-height: 160px) {
+@media screen and (max-height: 181px) {
   .hidden-height90 {
     display: none;
   }
