--- a/css/style.css
+++ b/css/style.css
@@ -61,13 +61,8 @@ a {
   position: fixed;
 }
 
-.relative-p {
-  position: relative;
-}
-
-.padding-default {
-  padding: 5px;
-
+.padding-l20{
+  padding-left: 20px;
 }
 
 .main-title {
@@ -117,10 +112,6 @@ a {
   opacity:inherit;
 }
 
-.padding-l20{
-  padding-left: 20px;
-}
-
 /* /////////////////////////////STYLE\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
 
 .principal-section {
@@ -137,7 +128,6 @@ a {
   width:230px;
   height: 100%;
   overflow-y: hidden;
-  border: 1px solid red;
 }
 
 header {
@@ -171,13 +161,13 @@ footer {
   display: none;
 }
 
-.side-top {
+.scroll-list {
   height: calc(100% - 120px);
-  overflow-y:hidden;
-  min-height: 450px;
+  overflow-y: auto;
 }
 
 .side-bottom {
+  padding: 5px;
   height: 120px;
 }
 
@@ -347,6 +337,10 @@ nav > ul > li:hover hr {
   padding-right: 15px;
   max-height: 85px;
   justify-content: center;
+}
+
+.footer-sx {
+  padding-top: 10px;
 }
 
 .album-mini-img {
