--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ a {
 
 /* /////////////////////////////STYLE\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
 
-.principal-section {
+.main-page-container {
   width: 100%;
   height: calc(100% - 90px);
 }
@@ -122,6 +122,8 @@ a {
 .box-r {
   height: 100%;
   width: calc(100% - 230px);
+  overflow-y: scroll;
+
 }
 
 .side-bar {
@@ -134,12 +136,6 @@ header {
   height: 90px;
   width: calc(100% - 230px);
   background-color: rgba(0, 0, 0, 0.5);
-}
-
-main {
-  height: 100%;
-  width: 100%;
-  overflow-y: scroll;
 }
 
 footer {
@@ -244,7 +240,7 @@ footer {
 
 .button-upgrade-container {
   line-height: 90px;
-  margin-right: 25px;
+  margin-right: 30px;
 }
 
 .button-upgrade-container > .button {
@@ -255,7 +251,7 @@ footer {
 }
 
 .button-upgrade-container:hover {
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
 
 /* nav in main section */
@@ -479,6 +475,7 @@ nav > ul > li:hover hr {
     flex-wrap: wrap;
 
   }
+
   .img-album-container {
     width: calc((100% / 12) * 3)
   }
@@ -506,6 +503,7 @@ nav > ul > li:hover hr {
     flex-wrap: wrap;
 
   }
+
   .img-album-container {
     width: calc((100% / 12) * 5)
   }
@@ -529,6 +527,10 @@ nav > ul > li:hover hr {
     width:50px;
     height: 100%;
     overflow-y: hidden;
+  }
+
+  .side-top {
+    height: 100%;
   }
 
   .xs-logo-sidebar {
@@ -599,6 +601,7 @@ nav > ul > li:hover hr {
   .label-title-box {
     font-size: 12px;
   }
+
   .label-subtitle {
     font-size: 10px;
   }
@@ -622,16 +625,20 @@ nav > ul > li:hover hr {
   .hidden-underxs {
     display: none;
   }
+
   .player-cmd {
     margin-top: 15px;
   }
+
   .controllers  {
     flex: none;
   }
+
   .controllers > ul {
     flex: none;
     display: block;
   }
+
   .footer-dx {
     transform: translate(0, -20%);
   }
